@@ -1,6 +1,12 @@
 0.3.4 SVN/Unreleased
 ====================
 
+  - Make Source Checkout retry up to 3 times, 10 seconds
+    apart. Somehow later versions of buildbot seem to fail much more
+    often when removing the checkout directory, and hopefully this
+    will work around that.
+    [sidnei]
+
   - Make Source Checkout mode configurable through ``vcs-mode``.
     [sidnei]
 
